# try-embedding

./: .gitignore  README.md  main.py  main2.py  requirements.txt  sentences.json
blog_scraper/: Cargo.toml
blog_scraper/src/: embed.rs  lib.rs  types.rs
scraper/: Cargo.toml
scraper/src/: main.rs
